syntax = "proto3";

package peers_touch.touch.v1.actor;

option go_package = "github.com/peers-touch/peers-touch/proto/gen/touch/v1/actor;actorv1";

import "touch/v1/actor/actor.proto";
import "google/protobuf/timestamp.proto";

// Activity vocabulary type
enum ActivityVocabularyType {
  ACTIVITY_VOCABULARY_TYPE_UNSPECIFIED = 0;
  ACTIVITY_VOCABULARY_TYPE_CREATE = 1;      // Create
  ACTIVITY_VOCABULARY_TYPE_UPDATE = 2;      // Update
  ACTIVITY_VOCABULARY_TYPE_DELETE = 3;      // Delete
  ACTIVITY_VOCABULARY_TYPE_FOLLOW = 4;      // Follow
  ACTIVITY_VOCABULARY_TYPE_ACCEPT = 5;      // Accept
  ACTIVITY_VOCABULARY_TYPE_REJECT = 6;      // Reject
  ACTIVITY_VOCABULARY_TYPE_ADD = 7;         // Add
  ACTIVITY_VOCABULARY_TYPE_REMOVE = 8;      // Remove
  ACTIVITY_VOCABULARY_TYPE_LIKE = 9;        // Like
  ACTIVITY_VOCABULARY_TYPE_ANNOUNCE = 10;   // Announce
  ACTIVITY_VOCABULARY_TYPE_UNDO = 11;       // Undo
  ACTIVITY_VOCABULARY_TYPE_BLOCK = 12;      // Block
  ACTIVITY_VOCABULARY_TYPE_FLAG = 13;       // Flag
}

// Activity
message Activity {
  string id = 1;                          // Activity ID
  ActivityVocabularyType type = 2;        // Activity type
  string actor = 3;                       // Actor ID
  string object = 4;                       // Object ID
  google.protobuf.Timestamp published = 5; // Published time
  google.protobuf.Timestamp updated = 6;   // Updated time
}

// Item collection
message ItemCollection {
  repeated string items = 1;              // Collection items
  int32 total_items = 2;                  // Total item count
  string first = 3;                       // First item ID
  string last = 4;                        // Last item ID
}

// Facade service definition
service FacadeService {
  // Actor facade operations
  
  // Create actor
  rpc CreateActor(CreateActorRequest) returns (Actor);
  
  // Get actor
  rpc GetActor(GetActorRequest) returns (Actor);
  
  // Update actor
  rpc UpdateActor(UpdateActorRequest) returns (Actor);
  
  // Delete actor
  rpc DeleteActor(DeleteActorRequest) returns (DeleteActorResponse);
  
  // Follow operations
  rpc Follow(FollowRequest) returns (FollowResponse);
  
  // Unfollow operations
  rpc Unfollow(UnfollowRequest) returns (UnfollowResponse);
  
  // Activity facade operations
  
  // Create activity
  rpc CreateActivity(CreateActivityRequest) returns (Activity);
  
  // Get activity
  rpc GetActivity(GetActivityRequest) returns (Activity);
  
  // Delete activity
  rpc DeleteActivity(DeleteActivityRequest) returns (DeleteActivityResponse);
  
  // Like operations
  rpc Like(LikeRequest) returns (LikeResponse);
  
  // Unlike operations
  rpc Unlike(UnlikeRequest) returns (UnlikeResponse);
  
  // Announce operations
  rpc Announce(AnnounceRequest) returns (AnnounceResponse);
  
  // Collection facade operations
  
  // Get inbox
  rpc GetInbox(GetInboxRequest) returns (ItemCollection);
  
  // Get outbox
  rpc GetOutbox(GetOutboxRequest) returns (ItemCollection);
  
  // Get followers
  rpc GetFollowers(GetFollowersRequest) returns (ItemCollection);
  
  // Get following
  rpc GetFollowing(GetFollowingRequest) returns (ItemCollection);
  
  // Get liked
  rpc GetLiked(GetLikedRequest) returns (ItemCollection);
  
  // Delivery facade operations
  
  // Send activity
  rpc SendActivity(SendActivityRequest) returns (SendActivityResponse);
  
  // Receive activity
  rpc ReceiveActivity(ReceiveActivityRequest) returns (ReceiveActivityResponse);
  
  // Forward activity
  rpc ForwardActivity(ForwardActivityRequest) returns (ForwardActivityResponse);
}

// Actor facade requests
message CreateActorRequest {
  ActivityVocabularyType actor_type = 1; // Actor type
  string id = 2;                         // Actor ID
}

message GetActorRequest {
  string id = 1; // Actor ID
}

message UpdateActorRequest {
  Actor actor = 1; // Actor data
}

message DeleteActorRequest {
  string id = 1; // Actor ID
}

message DeleteActorResponse {
  bool success = 1; // Success flag
}

// Follow requests
message FollowRequest {
  string actor_id = 1;   // Actor ID
  string target_id = 2;  // Target ID
}

message FollowResponse {
  bool success = 1; // Success flag
}

message UnfollowRequest {
  string actor_id = 1;   // Actor ID
  string target_id = 2;  // Target ID
}

message UnfollowResponse {
  bool success = 1; // Success flag
}

// Activity requests
message CreateActivityRequest {
  ActivityVocabularyType activity_type = 1; // Activity type
  string actor_id = 2;                      // Actor ID
  string object = 3;                        // Object ID
}

message GetActivityRequest {
  string id = 1; // Activity ID
}

message DeleteActivityRequest {
  string id = 1; // Activity ID
}

message DeleteActivityResponse {
  bool success = 1; // Success flag
}

// Like requests
message LikeRequest {
  string actor_id = 1;   // Actor ID
  string object_id = 2;  // Object ID
}

message LikeResponse {
  bool success = 1; // Success flag
}

message UnlikeRequest {
  string actor_id = 1;   // Actor ID
  string object_id = 2;  // Object ID
}

message UnlikeResponse {
  bool success = 1; // Success flag
}

// Announce requests
message AnnounceRequest {
  string actor_id = 1;   // Actor ID
  string object_id = 2;  // Object ID
}

message AnnounceResponse {
  bool success = 1; // Success flag
}

// Collection requests
message GetInboxRequest {
  string actor_id = 1; // Actor ID
}

message GetOutboxRequest {
  string actor_id = 1; // Actor ID
}

message GetFollowersRequest {
  string actor_id = 1; // Actor ID
}

message GetFollowingRequest {
  string actor_id = 1; // Actor ID
}

message GetLikedRequest {
  string actor_id = 1; // Actor ID
}

// Delivery requests
message SendActivityRequest {
  Activity activity = 1;           // Activity to send
  ItemCollection recipients = 2;    // Recipients
}

message SendActivityResponse {
  bool success = 1; // Success flag
}

message ReceiveActivityRequest {
  Activity activity = 1; // Received activity
}

message ReceiveActivityResponse {
  bool success = 1; // Success flag
}

message ForwardActivityRequest {
  Activity activity = 1; // Activity to forward
  string target_id = 2;  // Target ID
}

message ForwardActivityResponse {
  bool success = 1; // Success flag
}